[gd_scene load_steps=10 format=3 uid="uid://b4lwufhu6l7tk"]

[ext_resource type="Script" path="res://scenes/fire_emiter.gd" id="1_vrjv0"]
[ext_resource type="Texture2D" uid="uid://dso5b8bktdlrv" path="res://sprites/fire_emiter.png" id="2_qtyv2"]
[ext_resource type="Shader" path="res://scenes/Ray.gdshader" id="2_t8qgr"]
[ext_resource type="Script" path="res://scenes/RayCast2D2.gd" id="3_8uero"]
[ext_resource type="PackedScene" uid="uid://cfb077sbe44pc" path="res://scenes/fire_part.tscn" id="4_6lx06"]
[ext_resource type="Texture2D" uid="uid://dxyjw5ek2cuol" path="res://sprites/fake_ray.png" id="4_vtmue"]
[ext_resource type="PackedScene" uid="uid://dsb6dbx10a67k" path="res://scenes/ray_particles.tscn" id="6_eexq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2xxe"]
size = Vector2(21, 11)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_awgy0"]
shader = ExtResource("2_t8qgr")
shader_parameter/beams = 2
shader_parameter/energy = 3.0
shader_parameter/roughness = 3
shader_parameter/frequency = 5
shader_parameter/speed = 4.0
shader_parameter/thickness = 0.048
shader_parameter/outline_thickness = 0.1
shader_parameter/beam_difference = 0.0
shader_parameter/glow = 2.63
shader_parameter/outline_glow = 0.273
shader_parameter/color = Color(0.909804, 1, 1, 1)
shader_parameter/outline_color = Color(0.501961, 0.0117647, 0.960784, 1)
shader_parameter/progress = 0.622
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.05
shader_parameter/noise_scale = Vector2(1, 1)

[node name="fire_emiter" type="Node2D"]
script = ExtResource("1_vrjv0")

[node name="FireEmiter" type="Sprite2D" parent="."]
position = Vector2(1, 26)
texture = ExtResource("2_qtyv2")

[node name="inhiber" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="inhiber"]
position = Vector2(0.5, 5.5)
shape = SubResource("RectangleShape2D_a2xxe")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -1000)
collide_with_areas = true
script = ExtResource("3_8uero")

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2(0, 11)
points = PackedVector2Array(0, 0, 0, -164)

[node name="RaySprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_awgy0")
position = Vector2(0, 11)
rotation = 1.5708
scale = Vector2(100, 15)
texture = ExtResource("4_vtmue")
offset = Vector2(-0.500058, -0.00213269)

[node name="fire_part" parent="." instance=ExtResource("4_6lx06")]
position = Vector2(23, -12)

[node name="RayParticles" parent="." instance=ExtResource("6_eexq6")]

[node name="RayParticles2" parent="." instance=ExtResource("6_eexq6")]

[connection signal="body_entered" from="inhiber" to="." method="_on_inhiber_body_entered"]
[connection signal="body_exited" from="inhiber" to="." method="_on_inhiber_body_exited"]
